updated readme and a few minor database changes removing test data